@@ -99,7 +99,12 @@ NOTES
                  the destination IP address is not in a static 
                  route or on a local network, e.g., 192.168.1.1.  
                  For secondary IP addresses on an interface, this 
-                 parameter should not be specified.
+                 parameter should not be specified.  If the service
+                 is ipv4-static-route, this parameter must NOT
+                 be set.
+
+       STATIC_GATEWAY - The default IP address to use for routing
+                 when setting a static routing address.  
 
        INTERFACE_COMPONENTS - A list of component interfaces
                  only needed for a compound device such as a bridge.  
@@ -132,7 +137,7 @@ NOTES
 
          PREFIX  -  The prefix for the associated IP address.
 
-         GATEWAY -  The IP address for a network route.
+         STATIC_GATEWAY - The IP address for a network route.
 
          SOURCE  -  The source IP address to prefer when sending 
                     to the destinations covered by the specified
