@@ -1,5 +1,5 @@
-<!ENTITY version         "SVN-201308.02">
-<!ENTITY releasedate     "August 2, 2013">
+<!ENTITY version         "SVN-20130805">
+<!ENTITY releasedate     "August 5, 2013">
 <!ENTITY copyrightdate   "1999-2013"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone       "7.4">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
